Add the Notes File and Modify the Three File

--- a/three.html
+++ b/three.html
@@ -15,5 +15,8 @@
     >
       Click this
     </button>
+
+    <!---The statement document.get targets and finds the paragraph with ID Demo-->
+    <!--The innerHTML acesses the HTMl Element inside the Paragraph-->
   </body>
 </html>
