--- a/Javascript_Display.html
+++ b/Javascript_Display.html
@@ -12,7 +12,7 @@
     <p id="demo"></p>
 
     <script>
-      document.getElementById("demo").innerHTML = "Hello Javascript";
+      document.getElementById("demo").innerHTML = "<h2>Hello Javascript</h2>";
     </script>
   </body>
 </html>
