Add the Document alert

--- a/document_alert.html
+++ b/document_alert.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alert Box Output</title>
+    <title>Document Alert Display</title>
   </head>
   <body>
-    <h1>My First Web Page</h1>
-    <p>My first ALert Box</p>
-
+    <h1>This is My First Web Page</h1>
+    <p>This is my first Paragraph</p>
     <script>
-      window.alert(5 + 6);
+      document.write(5 + 6);
     </script>
-    <!--The above Script pops a Windows to give the Sum-->
+    <!--This Writes the Sum on the Browser Page-->
   </body>
 </html>
