Add Console Output

--- a/innerHTML.html
+++ b/innerHTML.html
@@ -12,6 +12,6 @@
     <script>
       document.getElementById("demo").innerHTML = "5+6";
     </script>
-    <!--This Doesnt Strip the HTML Content Like the DOcument.write Statement-->
+    <!--This Doesnt Strip the HTML Content Like the Document.write Statement-->
   </body>
 </html>
