Add a Const Object

--- a/const.html
+++ b/const.html
@@ -12,7 +12,7 @@
     <script>
       const cars = ["saab", "Volvo", "BMW"];
 
-      //Change an Element
+      //Change an Element. This element pops put the saab element
       cars[0] = "Toyota";
 
       //Add an Element
